# drove

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  current_code.py  install.sh  pyproject.toml
.Jules/: architect.md
.Jules/proposals/: 2026-06-29-observe-search-index.md
.claude/: crucible.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: install.yml  pr-title.yml  release.yml
docs/: README.md  architecture.md  cli.md  configuration.md  deploy.md  getting-started.md  speech-to-text.md
docs/superpowers/plans/: 2026-04-19-phase-1-core-tools.md  2026-04-19-phase-2-permissions.md  2026-04-19-phase-3-bash.md  2026-04-19-phase-4-router-evaluator.md  2026-04-20-phase-5-todos.md  2026-04-20-phase-6-web-fetch.md  2026-04-20-phase-7-subagent.md  2026-04-20-phase-8-compaction-rate-limit.md
docs/superpowers/specs/: 2026-04-19-agent-tools-design.md
src/drove/: __init__.py  backend.py  config.py  converter.py  downloader.py  model_config.py  model_store.py  observe.py  observe_tui.py  observe_web.py  proxy.py  server_manager.py  sessions.py  stats.py  tools.py  tui.py
src/drove/cli/: __init__.py  completions.py  main.py  models.py  server.py
src/drove/observe_web_static/: app.js  index.html  styles.css
src/drove/workers/: __init__.py  asr.py
src/vllama/: __init__.py  config.py  converter.py  downloader.py  model_config.py  model_store.py  observe.py  observe_tui.py  observe_web.py  proxy.py  server_manager.py  sessions.py  stats.py  tools.py  tui.py
src/vllama/agents/: bash_procs.py  compaction.py  evaluator.py  llm_call.py  permissions.py  rate_limit.py  router.py  runtime.py  subagent.py
src/vllama/agents/tools/: __init__.py  _base.py  bash.py  edit.py  glob.py  grep.py  list.py  read.py  task.py  todo.py  webfetch.py  write.py
src/vllama/cli/: __init__.py  completions.py  main.py  models.py  server.py
src/vllama/observe_web_static/: app.js  index.html  styles.css
test_models/: legacy.toml
test_models/org/model-1/: m.toml
tests/: conftest.py  test_agents_base.py  test_asr_worker.py  test_backend.py  test_bash_procs.py  test_chat_input.py  test_chat_loop_integration.py  test_cli_models.py  test_compaction.py  test_config.py  test_downloader.py  test_evaluator.py  test_llm_call.py  test_model_config.py  test_model_store.py  test_observe.py  test_observe_web.py  test_permission_modal.py  test_permissions.py  test_proxy.py  test_proxy_observe.py  test_rate_limit.py  test_router.py  test_runtime.py  test_runtime_prompt_integration.py  test_server_manager.py  test_subagent.py  test_tools_bash.py  test_tools_edit.py  test_tools_glob.py  test_tools_grep.py  test_tools_list.py  test_tools_read.py  test_tools_task.py  test_tools_todo.py  test_tools_webfetch.py  test_tools_write.py  test_tui_bg_command.py  test_tui_permits_command.py  test_tui_todos_command.py
