[project]
name = "vllama"
version = "0.1.0"
description = "llama.cpp server manager and proxy"
readme = "README.md"
authors = [
    { name = "Daniel Luca", email = "lucadanielcostin@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "httpx[http2]>=0.28.1",
    "huggingface-hub>=1.7.2",
    "psutil>=7.0.0",
    "pydantic-settings>=2.13.1",
    "textual>=8.1.1",
    "tomli-w>=1.2.0",
    "typer>=0.24.1",
    "uvicorn>=0.42.0",
]

[project.scripts]
vllama = "vllama.cli:app"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
strict = true
