[project]
name = "drove"
version = "0.1.2"
description = "llama.cpp server manager and proxy"
readme = "README.md"
authors = [
    { name = "Daniel Luca", email = "lucadanielcostin@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "httpx[http2]>=0.28.1",
    "huggingface-hub>=1.7.2",
    "psutil>=7.0.0",
    "pydantic-settings>=2.13.1",
    "textual>=8.1.1",
    "tomli-w>=1.2.0",
    "typer>=0.24.1",
    "uvicorn>=0.42.0",
    "rich>=14.3.3",
    "python-multipart>=0.0.32",
]

[project.urls]
Homepage = "https://drove.dev"
Repository = "https://github.com/cleanunicorn/drove"
Documentation = "https://drove.dev/docs"

[project.scripts]
drove = "drove.cli:app"

[project.optional-dependencies]
asr = [
    "onnx-asr[cpu]>=0.11.0",
]




[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
    "types-psutil>=7.2.2.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
strict = true

[[tool.mypy.overrides]]
# Optional extra: not installed in environments without 'drove[asr]'
module = ["onnx_asr", "onnx_asr.*"]
ignore_missing_imports = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
commit_message = "chore(release): v{version}\n\n[skip ci]"
commit_parser = "conventional"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^chore(\\(.*\\))?:",
    "^ci(\\(.*\\))?:",
    "^style(\\(.*\\))?:",
    "^test(\\(.*\\))?:",
]

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
